--- a/ui/Selector.ui
+++ b/ui/Selector.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>871</width>
-    <height>198</height>
+    <height>201</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -45,8 +45,8 @@
        <attribute name="title">
         <string>Prompts</string>
        </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_17">
-        <item>
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="0" column="0">
          <widget class="QFrame" name="Top">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -69,7 +69,7 @@
           <property name="toolTip">
            <string/>
           </property>
-          <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="6,3,6,2,3,3">
+          <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="6,3,0,0,3,3">
            <property name="spacing">
             <number>1</number>
            </property>
@@ -278,7 +278,7 @@
              <property name="title">
               <string>Minimum Pixels</string>
              </property>
-             <layout class="QGridLayout" name="gridLayout_15">
+             <layout class="QGridLayout" name="gridLayout_16">
               <property name="horizontalSpacing">
                <number>4</number>
               </property>
@@ -313,7 +313,7 @@
               <set>Qt::AlignHCenter|Qt::AlignTop</set>
              </property>
              <layout class="QGridLayout" name="gridLayout_3">
-              <item row="0" column="0">
+              <item row="0" column="1">
                <widget class="QPushButton" name="pushButton_save">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -859,11 +859,11 @@
            <item>
             <widget class="QGroupBox" name="groupBox_19">
              <property name="title">
-              <string>Only Keep Max Object</string>
+              <string>Max Polygon Only</string>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_16">
               <item>
-               <widget class="QRadioButton" name="radioButton_only_max_object">
+               <widget class="QRadioButton" name="radioButton_max_object_mode">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                   <horstretch>0</horstretch>
